--- a/docs/team/chensu2436.adoc
+++ b/docs/team/chensu2436.adoc
@@ -9,25 +9,24 @@
 
 == Overview
 
-The Module Appeal Management System (MAMS) is a desktop appeal management app for module appeal administrators. The MAMS system can quickly bring up entire lists of students, appeals, and modules for
-side-by-side comparison, with specific display commands to view the expanded details of any particular object in question. The MAMS system also provides
-a suite of commands for resolving appeals, overriding MC limits, and leaving special notes on students.
+The Module Appeal Management System (MAMS) is a desktop appeal management app for module appeal administrators.
+The MAMS system provides display commands to view the expanded details of any particular object,
+a suite of commands for resolving appeals, checking timetable clashes, overriding MC limits, and leaving special notes on students.
 The user interacts with it using a CLI, and it has a GUI created with JavaFX. It is written in Java, and has about 10 kLoC.
 
 == Summary of contributions
 
 * *Major enhancement 1: added the ability to check clashes for various cases*
-** What it does: allows the admin to check timetable clash between 2 modules or in a student's current timetable;
-Provides a shortcut for the admin to retrieve information on timetable clash in appeals requesting to add or drop modules.
+** What it does: allows the admin to check timetable clash in appeals requesting to add or drop modules, between 2 modules or in a student's current timetable;
 ** Justification: Checking timetable clash is one of the most important checks that an admin needs to perform before he/she decides to approve or reject an appeal.
 This feature improves the user experience significantly because it provides a convenient way for the admin who needs to perform such checks constantly.
-** Highlights: There are a few types of checks can be performed. Therefore, the user inputs for this command can take various forms and are highly flexible.
+** Highlights: There are a few types of checks can be performed. Therefore, the user inputs for this command can take various forms.
 An in-depth analysis of design alternatives is required to deal with these variations.
 
 * *Major enhancement 2: enhanced the find command that allows the user to search in different lists*
 ** What it does: allows the admin to search multiple keywords in multiple lists at the same time.
 ** Justification: There are a huge number of appeals, modules and students given the size of the university.
-This feature improves the user experience significantly by providing a convenient way to search items that he/she is more interested in.
+This feature provides a convenient way to search items that admin is more interested in.
 ** Highlights: This enhancement affects other commands since it will be used together with other commands often.
 For example, to filter all appeals requesting to add a particular module and perform checks in one go.
 
@@ -36,7 +35,6 @@ For example, to filter all appeals requesting to add a particular module and per
 * *Other contributions*:
 
 ** Project management:
-*** Managed project schedule tracking
 *** Migrated user stories to GitHub issues
 *** Managed issues on GitHub and assigned issues to corresponding Milestones and team members
 *** Managed releases `v1.3` on GitHub
@@ -45,14 +43,12 @@ For example, to filter all appeals requesting to add a particular module and per
 *** Changed prefixes to suit our app and performed related refactoring https://github.com/AY1920S1-CS2103-T11-2/main/pull/85[#85]
 ** Enhancements to existing features:
 *** Rectified disagreement in sample data https://github.com/AY1920S1-CS2103-T11-2/main/pull/206[#206]
-*** Edited TestUtils to rectify data disagreement for more meaningful tests https://github.com/AY1920S1-CS2103-T11-2/main/pull/211[#211]
 ** Documentation:
 *** Converted the first draft of User Guide to ascii doc https://github.com/AY1920S1-CS2103-T11-2/main/pull/25[#25]
-*** Enhanced the class diagram of logic component in Developer Guide https://github.com/AY1920S1-CS2103-T11-2/main/pull/214[#214]
+*** Enhanced the class diagrams of logic component in Developer Guide https://github.com/AY1920S1-CS2103-T11-2/main/pull/214[#214]
 ** Community:
 *** PRs reviewed (with non-trivial review comments): https://github.com/AY1920S1-CS2103-T11-2/main/pull/92[#92]
 *** Reported bugs and suggestions for other teams (examples:  https://github.com/chensu2436/ped/issues/8[1], https://github.com/chensu2436/ped/issues/6[2], https://github.com/chensu2436/ped/issues/7[3])
-*** Reviewed User Guide and Developer Guide, and reported suggestions for other teams in class
 
 == Contributions to the User Guide
 
@@ -64,16 +60,22 @@ include::../UserGuide.adoc[tag=clash]
 
 include::../UserGuide.adoc[tag=find]
 
+[NOTE]
+Due to page limit, only 1 find command example is included. Please refer to User Guide 3.4 for more examples.
+
 == Contributions to the Developer Guide
 
 |===
-|_Given below are sections I contributed to the Developer Guide. They showcase my ability to write technical documentation and the technical depth of my contributions to the project._
+|_Given below are sections I contributed to the Developer Guide Design and Implementation section. They showcase my ability to write technical documentation and the technical depth of my contributions to the project._
 |===
 
-include::../DeveloperGuide.adoc[tag=clash]
+_Due to page limit, only 1 class diagram of Logic Component is included. Refer to Developer Guide for other class diagrams_
+
+include::../DeveloperGuide.adoc[tag=logic]
+
+include::../DeveloperGuide.adoc[tag=clash1]
+
+include::../DeveloperGuide.adoc[tag=clash2]
 
 include::../DeveloperGuide.adoc[tag=find]
 
-include::../DeveloperGuide.adoc[tag=uc4]
-
-include::../DeveloperGuide.adoc[tag=test4]
