--- a/docs/team/aaronluk.adoc
+++ b/docs/team/aaronluk.adoc
@@ -62,11 +62,13 @@ MAMS is written primarily in Java, and features a GUI created with JavaFX, with 
 ** Justification:  This feature is important as it allows the user to provide justifications to why an appeal was approved or rejected.  Supervisors of the user can also check the reasons should there be any complaints from students with regards to their appeals the reasons added help justify the decisions of the user.
 ** Highlights:  This enhancement allows users to provide students with the reason for their choices to approve or reject their appeals.
 
-* *Code contributed*: [https://github.com/AY1920S1-CS2103-T11-2/main/tree/master/src/main/java/mams[Functional code]] [https://github.com/AY1920S1-CS2103-T11-2/main/tree/master/src/test[Test code]]
+* *Code contributed*: https://nus-cs2103-ay1920s1.github.io/tp-dashboard/#search=&sort=groupTitle&sortWithin=title&since=2019-09-06&timeframe=commit&mergegroup=false&groupSelect=groupByRepos&breakdown=false&tabOpen=true&tabType=authorship&tabAuthor=AaronLuk&tabRepo=AY1920S1-CS2103-T11-2%2Fmain%5Bmaster%5D[RepoSense Link] (Use provided RepoSense filters to view "Functional" and "Test" Code)
 
 * *Other contributions*:
 ** Documentation:
 *** Update storage component for MAMS in Developer Guide https://github.com/AY1920S1-CS2103-T11-2/main/pull/217[#217]
+** Implemented tests for new features increasing coverage by ~9% (Pull request: https://github.com/AY1920S1-CS2103-T11-2/main/pull/213[#213])
+***
 ** Community:
 *** PRs reviewed (with non-trivial review comments): https://github.com/AY1920S1-CS2103-T11-2/main/pull/77[#77], https://github.com/AY1920S1-CS2103-T11-2/main/pull/65[#65]
 *** Reviewed User Guide and Developer Guide, and reported suggestions for other teams in class
